Assert loading Pets production files - invalid evaluated Mesh? #112035

Closed
opened 2023-09-06 16:27:06 +02:00 by Bastien Montagne · 7 comments

System Information
Operating system: Linux (debian testing)
Graphics card: N/A

Blender Version
Broken: current main (00a36cbf24)
Worked: 3.6

Short description of error

Loading several production files from Pets Project assert in debug builds, e.g. 010_0060.lighting.blend.

BLI_assert failed: source/blender/geometry/intern/mesh_split_edges.cc:595, split_edges(), at 'BKE_mesh_is_valid(&mesh)'

Exact steps for others to reproduce the error
Open one of the files mentioned above, or the file below (with the first failing object being appended), in a debug build.

**System Information** Operating system: Linux (debian testing) Graphics card: N/A **Blender Version** Broken: current main (00a36cbf242) Worked: 3.6 **Short description of error** Loading several production files from Pets Project assert in debug builds, e.g. `010_0060.lighting.blend`. ``` BLI_assert failed: source/blender/geometry/intern/mesh_split_edges.cc:595, split_edges(), at 'BKE_mesh_is_valid(&mesh)' ``` **Exact steps for others to reproduce the error** Open one of the files mentioned above, or the file below (with the first failing object being appended), in a debug build.
Bastien Montagne added the
Type
Bug
Module
Modeling
Priority
Normal
Status
Confirmed
labels 2023-09-06 16:27:07 +02:00

@HooglyBoogly, if I'm not mistaken you worked on the split_edges code recently, right? Can you check?

EDIT: I'm not sure if it's really an error in the split_edges code.

@HooglyBoogly, if I'm not mistaken you worked on the split_edges code recently, right? Can you check? EDIT: I'm not sure if it's really an error in the split_edges code.
Member

I looked into this last week, but I'm having trouble debugging because of a crash in bone collection versioning:

/home/hans/blender-git/blender/source/blender/animrig/intern/bone_collections.cc:242:14: runtime error: member access within null pointer of type 'struct Bone'
Writing: /tmp/blender.crash.txt

I brought this up in the animation module chat and there was some discussion about it. I thought there was a fix too, but I'm still getting the crash today.

EDIT: Ah, I see you appended a specific object, thanks.

I looked into this last week, but I'm having trouble debugging because of a crash in bone collection versioning: ``` /home/hans/blender-git/blender/source/blender/animrig/intern/bone_collections.cc:242:14: runtime error: member access within null pointer of type 'struct Bone' Writing: /tmp/blender.crash.txt ``` I brought this up in the animation module chat and there was some discussion about it. I thought there was a fix too, but I'm still getting the crash today. EDIT: Ah, I see you appended a specific object, thanks.
Member

There isn't anything wrong with the split edges node other than it happens to have an assert for an invalid mesh. In this file the original mesh has invalid data for the bevel_weight_vert attribute which triggers an error in BKE_mesh_is_valid.

image

Without knowing how the original mesh was created, there's not much I can do in this case. I want to remove the BKE_mesh_is_valid assert soon anyway, maybe I can just remove it now.

There isn't anything wrong with the split edges node other than it happens to have an assert for an invalid mesh. In this file the original mesh has invalid data for the `bevel_weight_vert` attribute which triggers an error in `BKE_mesh_is_valid`. ![image](/attachments/090a697e-3edf-49b4-a94d-c0cbd06eb993) Without knowing how the original mesh was created, there's not much I can do in this case. I want to remove the `BKE_mesh_is_valid` assert soon anyway, maybe I can just remove it now.
Hans Goudey changed title from Crash loading Pets production files - invalid evaluated Mesh? to Assert loading Pets production files - invalid evaluated Mesh? 2023-09-06 17:33:03 +02:00
Author
Owner

RE bone versioning crash, fc02d5ee11 should fix it.

RE bone versioning crash, fc02d5ee111 should fix it.
Author
Owner

indeed, corrupted mesh data... we'll likely never know how it happened then :(

indeed, corrupted mesh data... we'll likely never know how it happened then :(
Author
Owner

But is it expected that 3.6 does not detect this issue?

But is it expected that 3.6 does not detect this issue?
Member

But is it expected that 3.6 does not detect this issue?

Yeah, I just left the mesh validation assert in there for a bit to help detect issues in main after I refactored the code. I'll remove the assert soon, before I backport the rewrite to 3.6.

I'm very glad this wasn't an issue with the node itself.

> But is it expected that 3.6 does not detect this issue? Yeah, I just left the mesh validation assert in there for a bit to help detect issues in main after I refactored the code. I'll remove the assert soon, before I backport the rewrite to 3.6. I'm very glad this wasn't an issue with the node itself.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-06 21:38:46 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112035
No description provided.