Cleanup: Remove mesh validation assert in mesh code

These asserts are helpful for development, but are too expensive and
strict to live permanently in debug builds.

Resolves #112035